# invoice-hitl

invoice-hitl/: .gitignore  Dockerfile  README.md  docker-compose.yml  invoice_app_hitl_update.py  pyproject.toml  requirements.txt  run_ui.sh
invoice-hitl/docs/: writeup.md
invoice-hitl/src/invoice_hitl/: confidence.py  config.py  evaluate.py  hitl.py  llm.py  ocr.py  preprocess.py  run.py  ui_gradio.py  utils.py  validate.py
invoice-hitl/src/invoice_hitl/extractors/: __init__.py  base.py  company_bank_address.py  dates.py  iban.py  invoice_number.py  phone.py  totals.py
